--- a/app/views/reports/_title.html.erb
+++ b/app/views/reports/_title.html.erb
@@ -91,3 +91,17 @@
 <div class="col-sm-12">
   <div id="charts_containers"></div>
 </div>
+
+<script type="text/javascript" charset="utf-8">
+    /*时间刷新*/
+    window.setInterval(function () {
+        $("#current-clock").text(format_time.current_time_clock());
+    }, 700);
+
+    /*设置整体背景颜色*/
+    var ClientHeight = $(document).height();
+    $('#report-content').css({
+        height: (ClientHeight - 140) + 'px',
+        overflow: 'auto'
+    });
+</script>
