--- a/app/views/reports/_wait-time-in-hours.erb
+++ b/app/views/reports/_wait-time-in-hours.erb
@@ -69,17 +69,6 @@
 
             loadChartData(100);
         });
-        /*时间刷新*/
-        window.setInterval(function () {
-            $("#current-clock").text(format_time.current_time_clock());
-        }, 700);
-
-        /*设置整体背景颜色*/
-        var ClientHeight = $(document).height();
-        $('#report-content').css({
-            height: (ClientHeight - 140) + 'px',
-            overflow: 'auto'
-        });
 
         $('.control-chart-interval-group li').each(function (index) {
             $(this).click(function () {
@@ -158,7 +147,8 @@
             }
         } else {
             remove_loading();
-            alert('error');
+//            alert('error');
+            console.log('error');
         }
 
         var get_ajax_data_value = "";
